--- a/packages.tex
+++ b/packages.tex
@@ -1,17 +1,36 @@
 \usepackage[ngerman]{babel}
-
 \usepackage[utf8]{inputenc}
-
-\usepackage{hyperref}
-
+\usepackage{lastpage}
+\usepackage{lmodern}
+\usepackage{setspace}
+\usepackage{fancyhdr}
 \usepackage{tabularx}
+\usepackage{graphicx}
+\usepackage{pdfpages}
+%\usepackage{listings}
+\usepackage{color}
+\usepackage{amssymb}
+%\usepackage{extarrows}
+\usepackage{float}
+\usepackage{hyperref}
+\usepackage{multirow}
+
+\usepackage{dcolumn}
+\newcolumntype{d}[1]{D{.}{.}{#1}}
+
 \usepackage{array}
 \newcolumntype{$}{>{\global\let\currentrowstyle\relax}}
 \newcolumntype{^}{>{\currentrowstyle}}
 \newcommand{\rowstyle}[1]{\gdef\currentrowstyle{#1}%
 	#1\ignorespaces
 }
-\usepackage{multirow}
+\renewcommand{\familydefault}{\sfdefault}
+
+
+\pagestyle{fancy}
+\fancyhf{}
+
+
 
 \usepackage{listings}
 \lstset{
