--- a/polymorphie/Ausarbeitung.tex
+++ b/polymorphie/Ausarbeitung.tex
@@ -24,7 +24,7 @@
 		\subsubsection{Inklusionspolymorphie}
 			Inklusionspolymorphie (englisch subtyping) liegt dann vor, wenn das Liskovsche Substitutionsprinzip erfüllt ist.
 			
-			\paragraph{Liskovsches Substitutionsprinzip}
+			\paragraph{Liskovsches Substitutionsprinzip}\mbox{}\\
 				Das Liskovsche Substitutionsprinzip ist erfüllt, wenn jedes Objekt eines Typen A (bei Vererbung die
 				Basisklasse) problemlos durch ein Objekt des Typen B (bei Vererbung die abgeleitete Klasse) ersetzt werden
 				kann, ohne dass sich dabei das Verhalten ändert. Ein Objekt des Typen B muss jedoch nicht durch ein Objekt
@@ -39,7 +39,7 @@
 			sollte aber auch bei Vererbungspolymorphie darauf geachtet werden, dass das Liskovsche Substitutionsprinzip
 			eingehalten wird, auch wenn dies nicht erforderlich ist.
 			
-			\paragraph{Virtuelle Methoden}
+			\paragraph{Virtuelle Methoden}\mbox{}\\
 				Eine virtuelle Methode, ist eine Methode bei der zur Kompilezit noch nicht feststeht, welcher Code ausgeführt
 				wird, wenn sie aufgerufen wird.
 			
