--- a/vererbung/datenkapselung.tex
+++ b/vererbung/datenkapselung.tex
@@ -1,4 +1,4 @@
-\begin{table}[h]
+\begin{table}[H]
 	\begin{tabularx}{\textwidth}{$X|^X|^X|^X}
 		\multicolumn{4}{l}{\bfseries Sichtbarkeit in ...} \\
 		\hline
