--- a/vererbung/Ausarbeitung.tex
+++ b/vererbung/Ausarbeitung.tex
@@ -128,10 +128,10 @@
 		abstrakte Klassen mit dem abstract-Schlüsselwort gekennzeichnet. In C++ ist eine Klasse, die eine rein virtuelle
 		Methode (virtual method() = 0) enthält, automatisch abstrakt.
 		
-		{\bfseries Java:}
+		\subparagraph*{Java:}
 			\UseRawInputEncoding{\lstinputlisting[language={Java}]{vererbung/abstrakt/abstrakt.java}}\inputencoding{utf8}
 		
-		{\bfseries C++:}
+		\subparagraph*{C++:}
 			\UseRawInputEncoding{\lstinputlisting[language={Java}]{vererbung/abstrakt/abstrakt.hpp}}\inputencoding{utf8}
 			
 			Folgender Code wäre nicht zulässig, da kein Objekt einer abstrakten Klasse erzeugt werden darf.
