--- a/polymorphie/Ausarbeitung.tex
+++ b/polymorphie/Ausarbeitung.tex
@@ -224,7 +224,7 @@
 			drei wichtigsten Arten der statischen Polymorphie (parametrische Polymorphie, Coercion und Überladung) verwendet.
 			
 			Parametrische Polymorphie wird verwendet, um beliebige Zähler- bzw. Nenner-Typen zuzulassen. So können beispielsweise
-			Doppelbrüche (fraction<fraction<int>, <fraction<int>>) oder Brüche mit komplexen Zahlen als Zähler bzw. Nenner erstellt
+			Doppelbrüche (fraction<fraction<int>, fraction<int>>) oder Brüche mit komplexen Zahlen als Zähler bzw. Nenner erstellt
 			werden.
 			
 			Des weiteren hat das Klassen-Template einen Konvertierungskonstruktor, der Objekte des Zähler-Typen implizit in Brüche
