--- a/Vererbung, Polymorphie_Ausarbeitung.tex
+++ b/Vererbung, Polymorphie_Ausarbeitung.tex
@@ -15,7 +15,7 @@
 \rhead{\thedate}
 \lfoot{Copyright \copyright\ \theauthor\ 2021}
 \cfoot{\thepage\ / \pageref{LastPage}}
-\rfoot{\url{https://github.com/PaulRaffer/polymorphie}}
+\rfoot{\url{github.com/PaulRaffer/polymorphie}}
 \makeatother
 
 \begin{document}
